[gd_scene load_steps=19 format=2]

[ext_resource path="res://UI/typography/UI_big.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Icons/xp_star.png" type="Texture" id=2]
[ext_resource path="res://Assets/Icons/coins-stack.png" type="Texture" id=3]
[ext_resource path="res://Assets/Icons/coin.png" type="Texture" id=4]
[ext_resource path="res://UI/RewardCollector.gd" type="Script" id=5]
[ext_resource path="res://Assets/Theme/collect_button_9p_disabled.png" type="Texture" id=6]
[ext_resource path="res://Assets/Theme/collect_button_9p_down.png" type="Texture" id=7]
[ext_resource path="res://Assets/Theme/collect_button_9p_normal.png" type="Texture" id=8]
[ext_resource path="res://Assets/Theme/collect_button_9p_hover.png" type="Texture" id=9]
[ext_resource path="res://Network/DefaultReward.tres" type="Resource" id=10]
[ext_resource path="res://UI/greyness_icon.gd" type="Script" id=11]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 64.0
content_margin_right = 64.0
content_margin_top = 64.0
content_margin_bottom = 64.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.466667, 0.72549, 0.141176, 1 )
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64
shadow_color = Color( 0, 0, 0, 0.196078 )
shadow_size = 16
shadow_offset = Vector2( 0, 8 )

[sub_resource type="Shader" id=2]
resource_local_to_scene = true
code = "shader_type canvas_item; 

uniform float greyness = 0.0f; 


void fragment() {
	COLOR = texture(TEXTURE, UV) * (1.0 - greyness); //* vec4(0.5, 0.5, 0.5, 1);
}"

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = SubResource( 2 )
shader_param/greyness = 0.0

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 2 )
shader_param/greyness = 0.0

[sub_resource type="Animation" id=6]
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/coins_icon_holder/coin_particels:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/HBoxContainer/VBoxContainer2/xp_icon_holder/xp_particles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:display_frac")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:label")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "collect_reward_action_label", "collected_reward_action_label" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/coins_icon_holder/coins_icon:greyness")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.8 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("VBoxContainer/HBoxContainer/VBoxContainer2/xp_icon_holder/xp_icon:greyness")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.8 ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_collected"
} ]
}
tracks/7/type = "value"
tracks/7/path = NodePath(".:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "RESET"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/coins_icon_holder/coin_particels:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/HBoxContainer/VBoxContainer2/xp_icon_holder/xp_particles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:display_frac")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:label")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "collect_reward_action_label" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/coins_icon_holder/coins_icon:greyness")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("VBoxContainer/HBoxContainer/VBoxContainer2/xp_icon_holder/xp_icon:greyness")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/7/type = "value"
tracks/7/path = NodePath(".:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="RewardCollector" type="PanelContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -660.0
rect_pivot_offset = Vector2( -1121.28, -35.0435 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
reward = ExtResource( 10 )
display_frac = 0.9
label = "collect_reward_action_label"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 1016.0
margin_bottom = 596.0
custom_constants/separation = 36

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 952.0
margin_bottom = 240.0
custom_constants/separation = 64
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 284.0
margin_right = 444.0
margin_bottom = 240.0

[node name="xp_icon_holder" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 160.0
margin_bottom = 160.0
rect_min_size = Vector2( 160, 160 )

[node name="xp_icon" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer2/xp_icon_holder"]
material = SubResource( 5 )
margin_right = 160.0
margin_bottom = 160.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
script = ExtResource( 11 )
greyness = 0.08

[node name="xp_particles" type="CPUParticles2D" parent="VBoxContainer/HBoxContainer/VBoxContainer2/xp_icon_holder"]
position = Vector2( 80, 40 )
emitting = false
amount = 50
lifetime = 1.5
one_shot = true
local_coords = false
texture = ExtResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 80, 0 )
direction = Vector2( 0, -1 )
spread = 0.0
gravity = Vector2( 0, -98 )
initial_velocity = 1000.0
initial_velocity_random = 0.7
scale_amount = 0.1
color_ramp = SubResource( 4 )

[node name="xp_label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 164.0
margin_right = 160.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.411765, 0.411765, 0.407843, 1 )
text = "500"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 508.0
margin_right = 668.0
margin_bottom = 240.0

[node name="coins_icon_holder" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 160.0
margin_bottom = 160.0
rect_min_size = Vector2( 160, 160 )

[node name="coins_icon" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/coins_icon_holder"]
material = SubResource( 3 )
margin_right = 160.0
margin_bottom = 160.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
script = ExtResource( 11 )
greyness = 0.08

[node name="coin_particels" type="CPUParticles2D" parent="VBoxContainer/HBoxContainer/VBoxContainer/coins_icon_holder"]
position = Vector2( 80, 40 )
emitting = false
amount = 50
lifetime = 1.5
one_shot = true
local_coords = false
texture = ExtResource( 4 )
emission_shape = 2
emission_rect_extents = Vector2( 80, 0 )
direction = Vector2( 0, -1 )
spread = 0.0
gravity = Vector2( 0, -98 )
initial_velocity = 1000.0
initial_velocity_random = 0.7
scale_amount = 0.17
color_ramp = SubResource( 4 )

[node name="coins_label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 160.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.411765, 0.411765, 0.407843, 1 )
text = "500"
align = 1
valign = 1

[node name="CollectButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 276.0
margin_right = 952.0
margin_bottom = 532.0
rect_min_size = Vector2( 0, 256 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="VBoxContainer/CollectButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "collect_reward_action_label"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/Collect = SubResource( 6 )
anims/RESET = SubResource( 7 )

[connection signal="pressed" from="VBoxContainer/CollectButton" to="." method="_on_CollectButton_pressed"]
